#3, #4, #5 | Implementing Adjustments and Printing report

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,6 @@ dependencies {
 }
 
 task simulate(type: JavaExec) {
-    classpath sourceSets.main.runtimeClasspath
+    classpath sourceSets.test.runtimeClasspath
     main = "org.jpchase.codingtest.SalesNotificationSimulation"
 }
